// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer renders guide slide when a guide is selected 1`] = `
<div>
  <div
    class="sc-cHGsZl cXJxAt"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TOsTZ kHXlYI"
    >
      <span
        class="sc-cJSrbW ffPrfs"
        data-testid="guidesBackButton"
      >
        <i
          class="sc-fhYwyz lacVya"
        >
          <span
            class="SVGInline SVGInline--cleaned"
          >
            <svg
              class="SVGInline-svg SVGInline--cleaned-svg"
              style="width: 16px;height: 16px;"
            />
          </span>
        </i>
      </span>
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-kvZOFW hMueUn"
    />
    <div
      class="sc-kgAjT dNWPzh"
      title="Title"
    >
      Title
    </div>
    <div
      class="sc-gisBJw gugmfG disable-font-ligatures"
    >
      <div>
        <div>
          Test Slide
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view including Remote Guides list 1`] = `
<div>
  <div
    class="sc-cHGsZl cXJxAt"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TOsTZ kHXlYI"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-kvZOFW hMueUn"
    />
    <div
      class="sc-feJyhm jiVjT slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-jDwBTQ dQuCOm remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-emmjRN jIQEAu"
      >
        <div
          class="sc-eHgmQL elkcPT"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-gHboQg jLgqbT"
      >
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-emmjRN jIQEAu"
      >
        <div
          class="sc-eHgmQL elkcPT"
          data-testid="remoteGuidesTitle"
        >
          Remote Guides
        </div>
      </div>
      <div
        class="sc-gHboQg jLgqbT"
      >
        <li
          class="sc-bnXvFD kJIqhs"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
            data-testid="remoteGuideidentifier"
          >
            Title
          </span>
          <span
            class="sc-dymIpo bCSABt"
            data-testid="removeGuideidentifier"
          >
            <i
              class="sc-gFaPwZ csFaIS sl-bin"
            />
          </span>
        </li>
      </div>
      <div
        class="sc-cpmLhU kfsxId"
      >
        <a
          class="sc-jAaTju LYlyC"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view without Remote Guides 1`] = `
<div>
  <div
    class="sc-cHGsZl cXJxAt"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TOsTZ kHXlYI"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-kvZOFW hMueUn"
    />
    <div
      class="sc-feJyhm jiVjT slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-jDwBTQ dQuCOm remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-emmjRN jIQEAu"
      >
        <div
          class="sc-eHgmQL elkcPT"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-gHboQg jLgqbT"
      >
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-eerKOB bHPwmk"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-jDwBTQ dQuCOm remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-emmjRN hLbBYW"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-cpmLhU kfsxId"
      >
        <a
          class="sc-jAaTju LYlyC"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;
